--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -1,8 +1,63 @@
+[conclamantes_api]
+# Enable the api backend end (enable if you are designing your own front end or other integration)
+# Default: yes
+# Options: [yes/no]
+apienable=yes
+
+# Optional API key string.  This can be pre-filled here, auto-generated and stored here, or no authentication
+# Default: none
+# Options: [none|<blank>|<key>]
+#apikey=none
+
+[db]
+# Select the database connector.  Connectors are available in src/db directory - simply use the filename there without the .py extention
+connector=sqlite
+# If the connector requires it (see connector source code), the following options are available
+#server=
+#port=
+#username=
+#password=
+
+[conclamantes_api]
+# Enable the web front end
+# Default: yes
+# Options: [yes/no]
+#webenable=yes
+
+# Enable authentication for the web front end
+# Default: none
+# Options: [local|config|none]
+#webauth=none
+
+# IP address to bind to.  Leave blank or set to 0.0.0.0 to use all addresses.
+#ip=
+# Port to listen on.  Leave blank to use default (5000).
+#port=
+
 [TVDB]
-tvdb_api=see https://www.thetvdb.com/?tab=apiregister
+# For series, conclamantes uses the TVDB, which requires registration and an API key
+# see https://www.thetvdb.com/?tab=apiregister
+tvdb_api=
 
 [IMDB]
 
-[general]
-ip=0.0.0.0
-port=5000
+[OMDB]
+
+[Trakt]
+# If enabled, allows monitoring of films and series added to Trakt, and adds them to conclamantes
+# Default: no
+# Options: [yes|no]
+#traktenable=no
+#traktapi=
+
+# Enable automatic searching of trakt added media
+# Default: yes
+# Options: [yes|no]
+#traktautosearch=yes
+
+# Add trakt found media in a stopped state
+# Default: no
+# Options: [yes|no]
+#traktautosearch=no
+
+
